code/ChatBox.scss
chatbox {
	z-index: 100;
	flex-direction: column;
	width: 100%;
	font-family: Poxel-Font;
	font-size: 18px;
	overflow: scroll;
	justify-content: flex-end;

	textentry {
		opacity: 0;
		color: white;
		padding: 10px;
		margin-top: 5px;
		font-size: 18px;
		flex-shrink: 0;
		flex-grow: 0;
		width: 100%;
		background-color: #1f1c2b;
		border-radius: 0px 0px 20px 20px;
	}

	.chat_canvas {
		flex-direction: column;
		align-items: flex-start;
	}

	&.open {
		textentry {
			opacity: 1;
		}
	}
}

chatentry {
	margin-bottom: 5px;
	color: white;
	transition: all 0.1s ease-out;
	opacity: 1;
	height: 26px;
	flex-shrink: 0;
	flex-grow: 0;
	padding: 12px;
	max-width: 100%;

	image {
		width: 32px;
		height: 32px;
		min-height: 32px;
		border-radius: 100px;
		position: absolute;
		left: 6px;
		top: 6px;
	}

	.name {
		padding-right: 20px;
		font-weight: 600;
		font-size: 18px;
		color: #c0fb2e;
		//	background-color: green;
		flex-shrink: 0;
	}

	.message {
		color: #ccc;
		font-size: 18px;
		//	background-color: red;
		flex-grow: 1;
	}

	&.noname .name {
		display: none;
	}

	&.noavatar image {
		display: none;
	}
}

